Fixing width dimensions for inverted wrap

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -26,11 +26,14 @@ body {
 .page-wrap {
   //display: flex;
   margin: 0 auto;
-  //max-width: 70em;
+  max-width: 100%;
   //overflow: hidden;
   //padding: 0 2em;
 }
-
+section, .nav-top, .nav-main {
+  margin: 0 auto;
+  max-width: 90em;
+}
 header .ui.grid > *,
 header .ui.grid > .column:not(.row){
   padding-left: 0;
@@ -69,10 +72,11 @@ header .ui.grid > .column:not(.row){
 }
 
 .ui.grid {
-  margin: 0;
+  margin: 0 auto;
+  max-width: 90em;
 }
 .ui.relaxed.grid {
-  margin: 0;
+  margin: 0 auto;
   padding: 0 1em 4em;
 }
 
@@ -107,7 +111,7 @@ header .ui.grid > .column:not(.row){
   padding-right: 2rem;
 }
 .inverted {
-  background: #344b56;
+  //background: #344b56;
   padding-top: 2em !important;
   
   h1, h2, h3, h4 {
@@ -118,6 +122,27 @@ header .ui.grid > .column:not(.row){
     color: rgba(255,255,255,.8);
   }
   
+  .episode .date, .artist, .description, .episode .podcast_name, .episode .episode_name, .episode .meta p, .episode .description {
+    color: rgba(255,255,255,.8) !important;
+    //margin: 0;
+  }
+  div.episode div.meta {
+    padding: 0;
+  }
+}
+.inverted-wrap {
+  background: #344b56;
+  padding: 2em 0;
+  width: 100%;
+  
+  h1, h2, h3, h4 {
+    color: rgba(255,255,255,.9);
+  }
+
+  p, li, a,  {
+    color: rgba(255,255,255,.8);
+  }
+
   .episode .date, .artist, .description, .episode .podcast_name, .episode .episode_name, .episode .meta p, .episode .description {
     color: rgba(255,255,255,.8) !important;
     //margin: 0;
